backend/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: innovatech-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: innovatech-backend
  template:
    metadata:
      labels:
        app: innovatech-backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/innovatech-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
