backend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
spec:
  selector:
    app: innovatech-backend
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
